This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.5, including beta and release candidate versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

07-Jul-2009 Gergo Erdosi
 + Added MySQL version check to installation.

07-Jul-2009 Andrew Eddie
 # Fixed modal article selector.

06-Jul-2009 Andrew Eddie
 # [#17103] Missing JText::_ in administrator/components/com_admin/helpers/html/directory.php
 ^ Change component configuration files from params to fields.
 ^ Make view/layout labels consistent and convert XML from params to fields.
 ^ Refactored instances of global $mainframe.
 ^ Moved the milkyway overrides out of the way for the time being (too many errors to fix).
 + Added JApplicationHelper::getComponentName from experimental branch.

05-Jul-2009 Gergo Erdosi
 ^ Replaced mod_status with its refactored version.
 ! Thanks to Andrea Tarr for helping refactor the mod_status module.
 # Fixed bug in installation.

05-Jul-2009 Andrew Eddie
 + Add accessability tweaks to admin mod_menu.
 + [#16547] Cancel button on Article Manager parameters does not work
 ^ All arguments are now optional in JParameter::__construct.
 ^ Refactored com_config.
 + Added support for tabbed configuration files in com_config component support.
 ^ Configured com_content component parameters to use tabs.

04-Jul-2009 Gergo Erdosi
 - Removed closing tag in configuration.php file.
 + Added new parameter option 'closingtag' to JRegistryFormatPHP::objectToString().
 ^ Syncronized configuration.php-dist with the changes.

04-Jul-2009 Andrew Eddie
 ^ SQL CHANGE: Add missing entries in jos_extensions.
 + Added new administrator template: bluestork.
 ^ Refactored admin mod_menu; added layout support.
 # Fixed bugs in module layout list parameter.
 ^ Menu changes based on Ron Severdia's suggestions added.